--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: "Roboto", sans-serif;
-    background-image: url("/img/pexels-ahmed-aqtai-2233416.jpg");
+    background-image: url("/img/imgs2/pexels-ahmed-aqtai-2233416.webp");
     background-size: cover;
     backdrop-filter: blur(4px);
     transition: 0.3;
